# minivault

./: .gitignore  .goreleaser.yaml  Cargo.toml  DOCS.md  LICENSE  README.md  profile.sh
.github/workflows/: release.yaml
benches/: minivault_bench.rs
example-clients/: client.go  client.py
src/: client.rs  commands.rs  lib.rs  main.rs  server.rs  vault.rs
src/commands/: add_user.rs  change_password.rs  decrypt.rs  encrypt.rs  init.rs  lock.rs  run.rs  unlock.rs
src/server/: message.rs
src/vault/: crypto.rs  util.rs
